make newsroom search input and button inline

--- a/app/ContentTypes/_newsroom.scss
+++ b/app/ContentTypes/_newsroom.scss
@@ -49,3 +49,15 @@ text-transform: uppercase;
       padding-right:10px;
     }
 }
+
+.btn-small {
+  float: right !important;
+}
+
+.input-oneline {
+  overflow: hidden; padding-right: .5em;
+}
+
+.input-small {
+  width: 100% !important;
+}
