--- a/app/_toolbar.scss
+++ b/app/_toolbar.scss
@@ -118,6 +118,12 @@
     vertical-align: middle;
 }
 
+.right-filler {
+    background: #d11242; 
+    height: 48px; 
+    position: inherit;
+}
+
 @media only screen and (max-width: 320px) {
     .navbar-brand {
         height: 53px;
