--- a/main2016.css
+++ b/main2016.css
@@ -575,6 +575,8 @@ h3 { padding-bottom: 15px; }
 
 .caret-up { width: 0; height: 0; border-left: 4px solid transparent; border-right: 4px solid transparent; border-bottom: 4px solid; display: inline-block; margin-left: 2px; vertical-align: middle; }
 
+.right-filler { background: #d11242; height: 48px; position: inherit; }
+
 @media only screen and (max-width: 320px) { .navbar-brand { height: 53px; } }
 
 @media only screen and (max-width: 767px) { .nav-social { background: #d11242; } }
