--- a/presspage.css
+++ b/presspage.css
@@ -540,7 +540,7 @@ h3 { padding-bottom: 15px; }
 
 .nav-social > a > i.fa { color: white; font-size: 18px; padding: 15px 10px; }
 
-.navbar { min-height: 48px; border-radius: 0 !important; margin-bottom: 0; }
+.navbar { min-height: 46px; border-radius: 0 !important; margin-bottom: 0; }
 
 .navbar-nav { margin: 0; }
 
@@ -566,7 +566,11 @@ h3 { padding-bottom: 15px; }
 
 .caret-up { width: 0; height: 0; border-left: 4px solid transparent; border-right: 4px solid transparent; border-bottom: 4px solid; display: inline-block; margin-left: 2px; vertical-align: middle; }
 
-.right-filler { background: #d11242; height: 48px; position: inherit; }
+.toolbar-background { background: #d11242; overflow: hidden; position: relative; }
+
+.toolbar-background .background { display: block; position: absolute; left: 0px; width: 50%; height: 100%; background-color: white; }
+
+.toolbar-background .container { background: white; padding-left: 0px; padding-right: 0px; }
 
 @media only screen and (max-width: 320px) { .navbar-brand { height: 53px; } }
 
@@ -583,6 +587,8 @@ h3 { padding-bottom: 15px; }
   ul.nav.navbar-nav.navbar-center { list-style: none !important; margin: auto !important; width: -webkit-fit-content; width: -moz-fit-content; width: fit-content; float: none; display: inline-block; } }
 
 @media screen and (min-width: 992px) { .mainBlueNavigation ul li a { padding-top: 70px !important; } }
+
+@media only screen and (max-width: 1200px) { .toolbar-background > .container { width: 100%; } }
 
 @media only screen and (min-width: 1200px) { .mainBlueNavigation ul li a { font-size: 1.5em; }
   .navbar-collapse { padding-right: 0; padding-left: 0; } }
