fixes alignment on social and nav in toolbar

--- a/app/_home2016.scss
+++ b/app/_home2016.scss
@@ -6,7 +6,7 @@ Wednesday 06, April, 2016
 
 
 !!! */
-@import "Content/Types/panel.scss";
+// @import "Content/Types/panel.scss";
 @import "variables.scss";
 @import "toolbar.scss";
 @import "carousel.scss";
