--- a/main2016.css
+++ b/main2016.css
@@ -527,7 +527,7 @@ h3 { padding-bottom: 15px; }
 /* Toolbar Styles */
 .toolbar { z-index: 9999; background: #fff; }
 
-.toolbar .quicktools { font-size: 16px; }
+.toolbar .quicktools { font-size: 16px; text-align: left; }
 
 .toolbar a.navbar-brand:hover { color: #003663; }
 
@@ -545,7 +545,7 @@ h3 { padding-bottom: 15px; }
 
 .toolbar li.active a { background: #ecf0f1 !important; color: #333 !important; }
 
-.nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0px solid transparent; height: 0; float: right; }
+.nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0px solid transparent; height: 0; }
 
 .nav-social > a > i.fa { color: white; font-size: 18px; padding: 15px 10px; }
 
@@ -585,10 +585,9 @@ h3 { padding-bottom: 15px; }
 
 @media only screen and (max-width: 767px) { .nav-social { background: #d11242; } }
 
-@media only screen and (min-width: 768px) { .navbar .navbar-collapse { text-align: center; }
-  .nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0 solid transparent; height: 0; }
+@media only screen and (min-width: 768px) { .nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0 solid transparent; height: 0; }
+  .navbar .navbar-nav { display: inline-block; float: none; margin-bottom: -2px; }
   .navbar .navbar-nav > .quicktools { display: inline-block; float: none; margin-bottom: -2px; }
-  .navbar .navbar-collapse { text-align: center; }
   .mainBlueNavigation { background: url("<t4 type='media' id='106586' formatter='image/path'/>") no-repeat; background-size: cover; }
   .mainBlueNavigation ul li a { color: #fff !important; font-size: 1.2em; font-weight: 100; font-family: 'Fjalla One', sans-serif; padding-top: 20px !important; padding-bottom: 15px !important; }
   ul.dropdown-menu > li a { padding-top: 0; }
@@ -597,10 +596,12 @@ h3 { padding-bottom: 15px; }
 
 @media screen and (min-width: 992px) { .mainBlueNavigation ul li a { padding-top: 70px !important; } }
 
-@media only screen and (max-width: 1200px) { .toolbar-background > .container { width: 100%; } }
+@media only screen and (max-width: 1200px) { .toolbar-background > .container { width: 100%; }
+  .navbar .navbar-collapse { text-align: center; } }
 
 @media only screen and (min-width: 1200px) { .mainBlueNavigation ul li a { font-size: 1.5em; }
-  .navbar-collapse { padding-right: 0; padding-left: 0; } }
+  .navbar-collapse { padding-right: 0; padding-left: 0; }
+  .nav-social { text-align: right !important; padding-right: 0px; } }
 
 .footer { display: block; min-height: 20px; padding: 20px; background: #003663; margin-left: 0; margin-right: 0; }
 
@@ -743,8 +744,7 @@ ul.breadcrumb a { color: #00447c; }
 
 .custom-search-input button:hover { border: 0; box-shadow: none; border-left: solid 1px #ccc; background: none; color: #d11242; }
 
-@media (min-width: 767px) { .navbar .navbar-nav { display: inline-block; float: none; margin-bottom: -2px; }
-  .navbar .navbar-collapse { text-align: center; } }
+@media (min-width: 767px) { .navbar .navbar-nav { display: inline-block; float: none; margin-bottom: -2px; } }
 
 hr { border-top: 2px solid #e6e1e1; }
 
