--- a/app/_toolbar.scss
+++ b/app/_toolbar.scss
@@ -7,6 +7,7 @@
 .toolbar .quicktools {
     font-size: 16px;
     text-align: left;
+    padding-left: 15px;
 }
 .toolbar a.navbar-brand:hover {
     color: #003663;
