--- a/home2016.css
+++ b/home2016.css
@@ -135,7 +135,7 @@ Wednesday 06, April, 2016
 /* Toolbar Styles */
 .toolbar { z-index: 9999; background: #fff; }
 
-.toolbar .quicktools { font-size: 16px; text-align: left; }
+.toolbar .quicktools { font-size: 16px; text-align: left; padding-left: 15px; }
 
 .toolbar a.navbar-brand:hover { color: #003663; }
 
