--- a/main2016.css
+++ b/main2016.css
@@ -527,7 +527,7 @@ h3 { padding-bottom: 15px; }
 /* Toolbar Styles */
 .toolbar { z-index: 9999; background: #fff; }
 
-.toolbar .quicktools { font-size: 16px; text-align: left; }
+.toolbar .quicktools { font-size: 16px; text-align: left; padding-left: 15px; }
 
 .toolbar a.navbar-brand:hover { color: #003663; }
 
@@ -743,8 +743,6 @@ ul.breadcrumb a { color: #00447c; }
 .custom-search-input button { margin: 2px 0 0 0; background: none; box-shadow: none; border: 0; color: #003663; padding: 0 8px 0 10px; border-left: solid 1px #ccc; }
 
 .custom-search-input button:hover { border: 0; box-shadow: none; border-left: solid 1px #ccc; background: none; color: #d11242; }
-
-@media (min-width: 767px) { .navbar .navbar-nav { display: inline-block; float: none; margin-bottom: -2px; } }
 
 hr { border-top: 2px solid #e6e1e1; }
 
