--- a/home2016.css
+++ b/home2016.css
@@ -183,12 +183,6 @@ Wednesday 06, April, 2016
 
 .caret-up { width: 0; height: 0; border-left: 4px solid transparent; border-right: 4px solid transparent; border-bottom: 4px solid; display: inline-block; margin-left: 2px; vertical-align: middle; }
 
-.toolbar-background { background: #d11242; overflow: hidden; position: relative; }
-
-.toolbar-background .background { display: block; position: absolute; left: 0px; width: 50%; height: 100%; background-color: white; }
-
-.toolbar-background .container { background: white; padding-left: 0px; padding-right: 0px; }
-
 @media only screen and (max-width: 320px) { .navbar-brand { height: 53px; } }
 
 @media only screen and (max-width: 767px) { .nav-social { background: #d11242; } }
@@ -202,7 +196,10 @@ Wednesday 06, April, 2016
   ul.dropdown-menu > li a { font-family: sans-serif; }
   ul.nav.navbar-nav.navbar-center { list-style: none !important; margin: auto !important; width: -webkit-fit-content; width: -moz-fit-content; width: fit-content; float: none; display: inline-block; } }
 
-@media screen and (min-width: 992px) { .mainBlueNavigation ul li a { padding-top: 70px !important; } }
+@media screen and (min-width: 992px) { .toolbar-background { background: #d11242; overflow: hidden; position: relative; }
+  .toolbar-background .background { display: block; position: absolute; left: 0px; width: 50%; height: 100%; background-color: white; }
+  .toolbar-background .container { background: white; padding-left: 0px; padding-right: 0px; }
+  .mainBlueNavigation ul li a { padding-top: 70px !important; } }
 
 @media only screen and (max-width: 1200px) { .toolbar-background > .container { width: 100%; }
   .navbar .navbar-collapse { text-align: center; } }
