--- a/app/_toolbar.scss
+++ b/app/_toolbar.scss
@@ -124,6 +124,9 @@
     .navbar-brand {
         height: 53px;
     }
+    .container-fluid {
+        
+    };
 
 }
 @media only screen and (max-width: 767px) {
