--- a/app/ContentTypes/_newsroom.scss
+++ b/app/ContentTypes/_newsroom.scss
@@ -1,63 +1,57 @@
-h3{
-  padding-bottom:15px;
+h3 {
+    padding-bottom: 15px;
 }
-.byline , .location{
-color: #1E1E1E;
-font-size: 1.4em;
-text-transform: uppercase;
-  a {
-    color: #1E1E1E !important;
-    font-weight: 400;
-  }
+.byline,
+.location {
+    color: #1E1E1E;
+    font-size: 1.4em;
+    text-transform: uppercase;
+    a {
+        color: #1E1E1E !important;
+        font-weight: 400;
+    }
 }
-
-.byline-date
-{
-  font-weight: bold;
+.byline-date {
+    font-weight: bold;
 }
-
 .Newsroom-image {
-  float: right;
-  .thumbnail {
-      border: none;
-      max-width : 500px;
-
-  }
-  .thumbnail .caption {
-      padding: 20px;
-      color: #00529C;
-      font-style: italic;
-      font-size: 1em;
-  }
+    float: right;
+    .thumbnail {
+        border: none;
+        max-width: 500px;
+    }
+    .thumbnail .caption {
+        padding: 20px;
+        color: #00529C;
+        font-style: italic;
+        font-size: 1em;
+    }
 }
-
 .story_preview {
-  padding: 15px
+    padding: 15px;
 }
 .story_preview:nth-child(odd) {
-  background-color: #f0f0f0
+    background-color: #f0f0f0;
 }
 .story_preview:nth-child(even) {
-  background-color: #fff
+    background-color: #fff;
 }
 .share-story-icons {
     text-align: right;
     font-size: 1.8em;
     .fa {
-      color:#3289BE;
-      padding-left:10px;
-      padding-right:10px;
+        color: #3289BE;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
-
 .btn-small {
-  float: right !important;
+    float: right !important;
 }
-
 .input-oneline {
-  overflow: hidden; padding-right: .5em;
+    overflow: hidden;
+    padding-right: 0.5em;
 }
-
 .input-small {
-  width: 100% !important;
+    width: 100% !important;
 }
