--- a/app/_presspage.scss
+++ b/app/_presspage.scss
@@ -2,10 +2,10 @@
 @import "ContentTypes/content";
 @import "ContentTypes/navmenu";
 @import "ContentTypes/TableStyles";
-@import "ContentTypes/AdmissionsStyles";
-@import "ContentTypes/HighlightBox";
+// @import "ContentTypes/AdmissionsStyles";
+// @import "ContentTypes/HighlightBox";
 @import "ContentTypes/CallsToAction";
-@import "ContentTypes/hero";
+// @import "ContentTypes/hero";
 @import "ContentTypes/newsroom";
 @import "ContentTypes/panel";
 @import "toolbar";
