--- a/app/_presspage.scss
+++ b/app/_presspage.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import "ContentTypes/variables";
 @import "ContentTypes/content";
 @import "ContentTypes/navmenu";
 @import "ContentTypes/TableStyles";
@@ -8,6 +8,6 @@
 // @import "ContentTypes/hero";
 @import "ContentTypes/newsroom";
 @import "ContentTypes/panel";
-@import "toolbar";
-@import "footer";
+@import "ContentTypes/toolbar";
+@import "ContentTypes/footer";
 @import "ContentTypes/stylestoimport";
