--- a/app/ContentTypes/_toolbar.scss
+++ b/app/ContentTypes/_toolbar.scss
@@ -125,7 +125,7 @@
         height: 53px;
     }
     .container-fluid {
-        
+
     };
 
 }
@@ -156,8 +156,8 @@
         margin-bottom: -2px;
     }
     .mainBlueNavigation {
-        // background: url("media/assets/homepagespring2016/home_headerbg.jpg") no-repeat;
-        background: url("<t4 type='media' id='106586' formatter='image/path'/>") no-repeat;
+        background: url("media/assets/homepagespring2016/home_headerbg.jpg") no-repeat;
+        // background: url("<t4 type='media' id='106586' formatter='image/path'/>") no-repeat;
         background-size: cover;
     }
     .mainBlueNavigation ul li a {
