--- a/home2016.css
+++ b/home2016.css
@@ -190,7 +190,7 @@ Wednesday 06, April, 2016
 @media only screen and (min-width: 768px) { .nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0 solid transparent; height: 0; }
   .navbar .navbar-nav { display: inline-block; float: none; margin-bottom: -2px; }
   .navbar .navbar-nav > .quicktools { display: inline-block; float: none; margin-bottom: -2px; }
-  .mainBlueNavigation { background: url("<t4 type='media' id='106586' formatter='image/path'/>") no-repeat; background-size: cover; }
+  .mainBlueNavigation { background: url("media/assets/homepagespring2016/home_headerbg.jpg") no-repeat; background-size: cover; }
   .mainBlueNavigation ul li a { color: #fff !important; font-size: 1.2em; font-weight: 100; font-family: 'Fjalla One', sans-serif; padding-top: 20px !important; padding-bottom: 15px !important; }
   ul.dropdown-menu > li a { padding-top: 0; }
   ul.dropdown-menu > li a { font-family: sans-serif; }
@@ -277,15 +277,18 @@ Wednesday 06, April, 2016
 
 @media only screen and (min-width: 768px) { .campus-info { border: 0; border-right: 1px solid white; border-bottom: 0; margin-bottom: 0; } }
 
-#callstoaction { background-color: #005fae; width: 100%; margin-bottom: 15px; padding-left: 25px; padding-top: 15px; padding-bottom: 15px; }
+/* Calls to action */
+.calls-to-action { padding: 25px; background: url("media/assets/homepagespring2016/calltoactbg.png") no-repeat; background-size: cover; background-color: rgba(52, 152, 219, 0.72); margin-bottom: 15px; }
 
-#callstoaction > a { color: #F1F0F0; font-size: 1.2em; font-weight: 100; line-height: 3; text-transform: uppercase; }
+.calls-to-action > hr { border-top: 1px solid rgba(255, 255, 255, 0.2); margin-top: 15px; margin-bottom: 15px; }
 
-#callstoaction > hr { border-style: none; border-bottom: 1px solid #949fa8; margin-right: 25px; margin-bottom: 5px; margin-top: 5px; }
+.calls-to-action > h3 > a { color: #F1F0F0; font-weight: 100; font-size: 1em; text-transform: uppercase; font-family: 'Fjalla One', sans-serif; }
 
-#callstoaction > hr:last-child { display: none; }
+@media screen and (max-width: 480px) { .calls-to-action { height: 460px !important; } }
 
-.clickable.col-lg-12.col-lg-6, .clickable.col-xs-6.col-sm-6.col-md-6.col-lg-3 { padding: 0.25em; }
+@media screen and (max-width: 767px) { .calls-to-action { height: 446px !important; } }
+
+@media screen and (min-width: 992px) { .calls-to-action > h3 > a { font-size: 1.5em; } }
 
 #layout, #menu, .menu-link { -webkit-transition: all 0.2s ease-out; -moz-transition: all 0.2s ease-out; -ms-transition: all 0.2s ease-out; -o-transition: all 0.2s ease-out; transition: all 0.2s ease-out; }
 
@@ -294,6 +297,8 @@ Wednesday 06, April, 2016
 .custombtn { border-radius: 0; margin-bottom: 15px; width: 100%; font-weight: 100 !important; box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175); }
 
 .custombtn span { color: #FFF; }
+
+.carousel-inner > .item > a > img, .carousel-inner > .item > img { line-height: 1; margin: auto; width: 100%; }
 
 .ie8 .img-responsive { display: block; height: auto; max-width: 100%; vertical-align: middle; border: 0; -ms-interpolation-mode: bicubic; }
 
@@ -328,6 +333,8 @@ h4 { color: #3498db; font-size: 18px; font-weight: 500; line-height: 1.3; }
 h5 { color: #2c3e50; font-size: 16px; font-weight: 500; }
 
 h6 { color: #e74c3c; font-size: 13px; font-weight: 500; }
+
+.msudenver_logo { max-width: 216px; padding: 15px; }
 
 .readmore { text-align: right; margin-top: 10px; }
 
@@ -389,4 +396,5 @@ p.event-home-date { color: gray; font-size: 1.2em; font-weight: bold; }
 
 @media only screen and (min-width: 768px) { #layout { padding: 0; margin: 0 auto; left: 0; }
   #menu { position: relative; left: 0; padding: 0; margin: 0 auto; width: 100%; }
-  .header { text-align: left; } }
+  .header { text-align: left; }
+  .navbar .navbar-collapse { text-align: center; } }
