removes table styles from presage.css

--- a/app/_presspage.scss
+++ b/app/_presspage.scss
@@ -1,7 +1,7 @@
 @import "ContentTypes/variables";
 @import "ContentTypes/content";
 @import "ContentTypes/navmenu";
-@import "ContentTypes/TableStyles";
+// @import "ContentTypes/TableStyles";
 // @import "ContentTypes/AdmissionsStyles";
 // @import "ContentTypes/HighlightBox";
 @import "ContentTypes/CallsToAction";
