adds fix to align nav-social on homepage

--- a/app/_home2016.scss
+++ b/app/_home2016.scss
@@ -28,15 +28,10 @@ Wednesday 06, April, 2016
     left: 0;
     top: 100px;
 }
-.custombtn {
-    border-radius: 0;
-    margin-bottom: 15px;
-    width: 100%;
-    font-weight: 100!important;
-    box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175);
-}
-.custombtn span {
-    color: #FFF;
+
+.nav-social {
+    text-align: center !important;
+    padding-right: 0px;
 }
 
 .carousel-inner>.item>a>img, .carousel-inner>.item>img {
