--- a/home2016.css
+++ b/home2016.css
@@ -294,9 +294,7 @@ Wednesday 06, April, 2016
 
 #layout { z-index: 9998; padding-left: 200px; left: 0; top: 100px; }
 
-.custombtn { border-radius: 0; margin-bottom: 15px; width: 100%; font-weight: 100 !important; box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175); }
-
-.custombtn span { color: #FFF; }
+.nav-social { text-align: center !important; padding-right: 0px; }
 
 .carousel-inner > .item > a > img, .carousel-inner > .item > img { line-height: 1; margin: auto; width: 100%; }
 
