--- a/home2016.css
+++ b/home2016.css
@@ -183,9 +183,9 @@ Wednesday 06, April, 2016
 
 .caret-up { width: 0; height: 0; border-left: 4px solid transparent; border-right: 4px solid transparent; border-bottom: 4px solid; display: inline-block; margin-left: 2px; vertical-align: middle; }
 
-@media only screen and (max-width: 320px) { .navbar-brand { height: 53px; } }
+@media only screen and (max-width: 320px) { .navbar-brand { height: 53px; } .desktoptel { display: none !important;} .mobiletel { display: inline !important;} }
 
-@media only screen and (max-width: 767px) { #add_line_break br { line-height: 16px;} .nav-social { background: #d11242; } }
+@media only screen and (max-width: 767px) { #add_line_break br { line-height: 16px;} .nav-social { background: #d11242; } .desktoptel { display: none !important;} .mobiletel { display: inline !important;} }
 
 @media only screen and (min-width: 768px) { .nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0 solid transparent; height: 0; }
   .navbar .navbar-nav { display: inline-block; float: none; margin-bottom: -2px; }
@@ -362,7 +362,11 @@ h6 { color: #e74c3c; font-size: 13px; font-weight: 500; }
 
 hr { border-top: 1px solid #e6e1e1; margin-top: 15px; margin-bottom: 15px; }
 
-#add_line_break {  line-height: 0px; }
+#add_line_break { line-height: 0px; }
+
+.desktoptel { text-decoration: none !important; }
+
+.mobiletel { display: none; }
 
 .navbar-inner { text-align: center; }
 
