add chat icon to footer

--- a/home2016.css
+++ b/home2016.css
@@ -183,6 +183,8 @@ Wednesday 06, April, 2016
 
 .caret-up { width: 0; height: 0; border-left: 4px solid transparent; border-right: 4px solid transparent; border-bottom: 4px solid; display: inline-block; margin-left: 2px; vertical-align: middle; }
 
+.chat-icon { height: 20px; padding-right: 5px;  }
+
 @media only screen and (max-width: 320px) { .navbar-brand { height: 53px; } .desktoptel { display: none !important;} .mobiletel { display: inline !important;} }
 
 @media only screen and (max-width: 767px) { .carousel-caption { height: 200px; } .nav-social { background: #d11242; } .desktoptel { display: none !important;} .mobiletel { display: inline !important;} }
