--- a/home2016.css
+++ b/home2016.css
@@ -187,7 +187,7 @@ Wednesday 06, April, 2016
 
 @media only screen and (max-width: 320px) { .navbar-brand { height: 53px; } .desktoptel { display: none !important;} .mobiletel { display: inline !important;} }
 
-@media only screen and (max-width: 767px) { .carousel-caption { height: 200px; } .nav-social { background: #d11242; } .desktoptel { display: none !important;} .mobiletel { display: inline !important;} }
+@media only screen and (max-width: 767px) { .carousel-caption { height: 200px; } .nav-social { background: #d11242; } .desktoptel { display: none !important;} .mobiletel { display: inline !important;} .carousel-control.left { width: 80px !important; } .carousel-control.right { width: 78px !important; } .carousel-control { position: absolute; top: 20%; } }
 
 @media only screen and (min-width: 768px) { .nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0 solid transparent; height: 0; }
   .navbar .navbar-nav { display: inline-block; float: none; margin-bottom: -2px; }
@@ -213,13 +213,15 @@ Wednesday 06, April, 2016
 /* Carousel Styles */
 #slider > a.left.carousel-control, #slider > a.right.carousel-control { color: #fff; }
 
-.carousel-control.right { background: none !important; width: 78px; text-align: left; text-shadow: none !important; }
+.carousel-control.right { background: none !important; width: 7%; text-align: left; text-shadow: none !important; }
 
-.carousel-control.left { background: none !important; width: 80px; text-align: right; text-shadow: none !important; }
+.carousel-control.left { background: none !important; width: 93%; text-align: right; text-shadow: none !important; }
 
 .carousel-control { opacity: 0.0; }
 
-.fa-inverse { color: #003879 !important; }
+.fa-inverse { color: #fff !important; }
+
+.fa-angle-left, .fa-angle-right { font-weight: bold !important; font-size: 1.5em; }
 
 .fa-lg { font-size: 1.8em; }
 
@@ -260,7 +262,7 @@ Wednesday 06, April, 2016
 .firstheight img { display: none; }
 
 @media only screen and (min-width: 768px) { .carousel-indicators { bottom: 10px; width: 200px; right: 0; left: inherit; }
-  .carousel-control { position: absolute; top: 30%; }
+  .carousel-control { position: absolute; top: 80%; }
   .carousel-caption > h2 { font-size: 32px; }
   .carousel-caption > h3 { font-size: 23px; line-height: 30px; } }
 
