--- a/development/terminalfour/sass/style.scss
+++ b/development/terminalfour/sass/style.scss
@@ -1,5 +1,87 @@
-// Uncomment if you are NOT using a framework - normalize is included in any of the frameworks, so not needed twice...
-//@import "normalize";
-
 // Add your custom style declaration in this file
 
+* {
+	box-sizing: border-box;
+}
+
+html,
+body {
+	height: 100%;
+	background-color: #f9f9f9;
+  	font-family: 'Open Sans', Helvetica, sans-serif;
+  	font-size: 12px;
+	color: #333;
+}
+
+p {
+	max-width: 50em;
+}
+
+ul {
+  
+  li{
+    padding-left: 0;
+  }
+}
+
+hr {
+  width: 50%;
+  margin: 3em auto;
+  border: none;
+  border-top: 1px solid #999;
+}
+
+pre,
+code {
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 300;
+  display: block;
+  white-space: pre-wrap;
+  /*max-width: 50em;
+  overflow-x: scroll;*/
+}
+
+.container {
+	max-width: 75em;
+	margin-left: auto;
+	margin-right: auto;
+	
+}
+
+.code-example {
+  border-radius: .25em;
+  padding-left: 2em;
+  border: 1px solid rgba(189, 177, 104, .8);
+  background-color: rgba(250, 250, 250, .7);
+}
+
+.example-box {
+	padding: 1em .75em;
+	background-color: rgba(236,236,236, 1);
+	border: 1px solid rgba(220, 198, 224, .9);
+	border-radius: .25em;
+	margin-bottom: 2em;
+}
+
+#congrat-message {
+	text-align: center;
+}
+
+.example-title {
+	font-weight: bold;
+}
+
+.code-text {
+  background-color: rgba(250, 250, 250, .7);
+  border: 1px solid rgba(189, 177, 104, .8);
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+
+@media (min-width: 50em) {
+  html,
+  body {
+    font-size: 16px;
+  }
+}
