--- a/app/ContentTypes/content.scss
+++ b/app/ContentTypes/content.scss
@@ -8,6 +8,7 @@
   background: #fff;
   max-width: 1200px
 }
+
 .content .img-responsive {
   padding: 0 15px;
 }
@@ -43,7 +44,7 @@
 
 .content p a,
 .content ul a {
-color: #248dc1 !important;
+color: #248dc1;
 text-decoration: none !important;
 padding-bottom: 0px !important;
 border-bottom:  0px solid #248dc1 !important;
@@ -55,4 +56,8 @@ text-decoration: none !important;
 padding-bottom: 3px !important;
 border-bottom:  2px solid #248dc1 !important;
 transition: all 250ms ease-in-out;
+}
+
+.thumbnail .img-responsive {
+    padding: 0px;
 }
