--- a/app/ContentTypes/_footer.scss
+++ b/app/ContentTypes/_footer.scss
@@ -14,6 +14,11 @@
     text-align: right;
 }
 
+.footer .fa {
+    font-size: 2em;
+    padding: 0px 5px;
+}
+
 .campus-info {
     border: 0;
     border-bottom: 1px solid white;
