--- a/main2016.css
+++ b/main2016.css
@@ -1800,6 +1800,11 @@ h3 {
   text-align: right;
 }
 
+.footer .fa {
+  font-size: 2em;
+  padding: 0px 5px;
+}
+
 .campus-info {
   border: 0;
   border-bottom: 1px solid white;
