--- a/home2016.css
+++ b/home2016.css
@@ -171,6 +171,30 @@ Wednesday 06, April, 2016
 
 .dropdown-menu { padding-left: 10px; padding-right: 10px; }
 
+.caret-up { width: 0; height: 0; border-left: 4px solid transparent; border-right: 4px solid transparent; border-bottom: 4px solid; display: inline-block; margin-left: 2px; vertical-align: middle; }
+
+@media only screen and (max-width: 320px) { .navbar-brand { height: 53px; } }
+
+@media only screen and (max-width: 767px) { .nav-social { background: #d11242; } }
+
+@media only screen and (min-width: 768px) { .nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0 solid transparent; height: 0; }
+  .navbar .navbar-nav { display: inline-block; float: none; margin-bottom: -2px; }
+  .navbar .navbar-nav > .quicktools { display: inline-block; float: none; margin-bottom: -2px; }
+  ul.dropdown-menu > li a { padding-top: 0; }
+  ul.dropdown-menu > li a { font-family: sans-serif; }
+  ul.nav.navbar-nav.navbar-center { list-style: none !important; margin: auto !important; width: -webkit-fit-content; width: -moz-fit-content; width: fit-content; float: none; display: inline-block; } }
+
+@media screen and (min-width: 992px) { .toolbar-background { background: #d11242; overflow: hidden; position: relative; }
+  .toolbar-background .background { display: block; position: absolute; left: 0px; width: 50%; height: 100%; background-color: white; }
+  .toolbar-background .container { background: white; padding-left: 0px; padding-right: 0px; } }
+
+@media only screen and (max-width: 1200px) { .toolbar-background > .container { width: 100%; }
+  .navbar .navbar-collapse { text-align: center; } }
+
+@media only screen and (min-width: 1200px) { .navbar-collapse { padding-right: 0; padding-left: 0; }
+  .nav-social { text-align: right !important; padding-right: 0px; } }
+
+/* mainBlueNavigation Styles */
 .mainBlueNavigation { background: #00447c; }
 
 .mainBlueNavigation ul li a { color: #fff !important; }
@@ -185,28 +209,15 @@ Wednesday 06, April, 2016
 
 @media only screen and (max-width: 320px) { .navbar-brand { height: 53px; } }
 
-@media only screen and (max-width: 767px) { .nav-social { background: #d11242; } }
-
-@media only screen and (min-width: 768px) { .nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0 solid transparent; height: 0; }
-  .navbar .navbar-nav { display: inline-block; float: none; margin-bottom: -2px; }
-  .navbar .navbar-nav > .quicktools { display: inline-block; float: none; margin-bottom: -2px; }
-  .mainBlueNavigation { background: url("media/assets/homepagespring2016/home_headerbg.jpg") no-repeat; background-size: cover; }
+@media only screen and (min-width: 768px) { .mainBlueNavigation { background: url("media/assets/homepagespring2016/home_headerbg.jpg") no-repeat; background-size: cover; }
   .mainBlueNavigation ul li a { color: #fff !important; font-size: 1.2em; font-weight: 100; font-family: 'Fjalla One', sans-serif; padding-top: 20px !important; padding-bottom: 15px !important; }
   ul.dropdown-menu > li a { padding-top: 0; }
   ul.dropdown-menu > li a { font-family: sans-serif; }
   ul.nav.navbar-nav.navbar-center { list-style: none !important; margin: auto !important; width: -webkit-fit-content; width: -moz-fit-content; width: fit-content; float: none; display: inline-block; } }
 
-@media screen and (min-width: 992px) { .toolbar-background { background: #d11242; overflow: hidden; position: relative; }
-  .toolbar-background .background { display: block; position: absolute; left: 0px; width: 50%; height: 100%; background-color: white; }
-  .toolbar-background .container { background: white; padding-left: 0px; padding-right: 0px; }
-  .mainBlueNavigation ul li a { padding-top: 70px !important; } }
+@media screen and (min-width: 992px) { .mainBlueNavigation ul li a { padding-top: 70px !important; margin: 0 15px 0 10px; } }
 
-@media only screen and (max-width: 1200px) { .toolbar-background > .container { width: 100%; }
-  .navbar .navbar-collapse { text-align: center; } }
-
-@media only screen and (min-width: 1200px) { .mainBlueNavigation ul li a { font-size: 1.5em; }
-  .navbar-collapse { padding-right: 0; padding-left: 0; }
-  .nav-social { text-align: right !important; padding-right: 0px; } }
+@media only screen and (min-width: 1200px) { .mainBlueNavigation ul li a { font-size: 1.5em; } }
 
 /* Carousel Styles */
 #slider > a.left.carousel-control, #slider > a.right.carousel-control { color: #fff; }
@@ -274,6 +285,10 @@ Wednesday 06, April, 2016
 .campus-info { border: 0; border-bottom: 1px solid white; margin-bottom: 15px; }
 
 .college-portrait { float: right; }
+
+.footer .fa-2x { font-size: 1.75em; }
+
+.footer .fa { padding: 0px 5px; }
 
 @media only screen and (min-width: 768px) { .campus-info { border: 0; border-right: 1px solid white; border-bottom: 0; margin-bottom: 0; } }
 
