--- a/app/ContentTypes/_footer.scss
+++ b/app/ContentTypes/_footer.scss
@@ -22,6 +22,12 @@
 .college-portrait {
     float: right;
 }
+.footer .fa-2x {
+    font-size: 1.75em;
+}
+.footer .fa {
+    padding: 0px 5px;
+}
 @media only screen and (min-width: 768px) {
     .campus-info {
         border: 0;
