--- a/main2016.css
+++ b/main2016.css
@@ -1763,6 +1763,14 @@ h3 {
   float: right;
 }
 
+.footer .fa-2x {
+  font-size: 1.75em;
+}
+
+.footer .fa {
+  padding: 0px 5px;
+}
+
 @media only screen and (min-width: 768px) {
   .campus-info {
     border: 0;
