fixes the padding on the logo

--- a/home2016.css
+++ b/home2016.css
@@ -327,6 +327,8 @@ h5 { color: #2c3e50; font-size: 16px; font-weight: 500; }
 
 h6 { color: #e74c3c; font-size: 13px; font-weight: 500; }
 
+.msudenver_logo { padding: 15px; }
+
 .readmore { text-align: right; margin-top: 10px; }
 
 .image_caption { font-size: 12px; line-height: 19px; color: #73787e; }
