adds SiteHeader.scss

--- a/app/_main2016.scss
+++ b/app/_main2016.scss
@@ -21,4 +21,5 @@
 @import "ContentTypes/panel";
 @import "ContentTypes/toolbar";
 @import "ContentTypes/footer";
+@import "ContentTypes/SiteHeader";
 @import "ContentTypes/stylestoimport";
