--- a/main2016.css
+++ b/main2016.css
@@ -1471,6 +1471,10 @@ h3 {
   font-size: 1em;
 }
 
+.newsimage {
+  float: right;
+}
+
 .story_preview {
   padding: 15px;
 }
@@ -1777,6 +1781,28 @@ h3 {
   }
 }
 
+.siteheader {
+  margin-top: 55px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  padding: 5px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  border-bottom: 2px solid #cc2951;
+}
+
+@media (max-width: 767px) {
+  .siteheader {
+    margin-top: 15px;
+    text-align: right;
+    padding-right: 10px;
+  }
+}
+
 .collapse {
   position: relative;
   height: 0;
@@ -1828,10 +1854,6 @@ h3 {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-}
-
-.newsimage {
-  float: right;
 }
 
 .fb-like-box {
