moved .card class into own .scss

--- a/app/_main2016.scss
+++ b/app/_main2016.scss
@@ -22,3 +22,4 @@
 @import "ContentTypes/footer";
 @import "ContentTypes/SiteHeader";
 @import "ContentTypes/stylestoimport";
+@import "ContentTypes/card";
