begin formatting first 2 columns of footer

--- a/app/ContentTypes/_footer.scss
+++ b/app/ContentTypes/_footer.scss
@@ -14,6 +14,11 @@
     text-align: right;
 }
 
+
+.footer hr {
+  opacity: 0.25;
+}
+
 .campus-info {
     border: 0;
     border-bottom: 1px solid white;
