--- a/main2016.css
+++ b/main2016.css
@@ -1751,11 +1751,23 @@ h3 {
   color: #fff;
   font-size: 15px;
   font-weight: 200;
-  text-align: right;
+}
+
+.social i {
+  word-spacing: 5px;
 }
 
 .footer hr {
   opacity: 0.25;
+}
+
+.footer-logo {
+  text-align: center;
+  transform: translate(0%, 10%);
+}
+
+.footer-menu {
+  line-height: 0.8;
 }
 
 .campus-info {
@@ -1782,6 +1794,12 @@ h3 {
     border-right: 1px solid white;
     border-bottom: 0;
     margin-bottom: 0;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .footer-menu {
+    text-align: center;
   }
 }
 
