--- a/app/ContentTypes/_footer.scss
+++ b/app/ContentTypes/_footer.scss
@@ -56,31 +56,34 @@
 }
 
 @media only screen and (max-width: 767px) {
-  .campus-info {
-      border: 0;
-      border-bottom: none;
-      margin-bottom: 15px;
-  }
   .footer-menu {
     text-align: center;
+  }
+  .desktop-msuinfo-show {
+    display: none;
+  }
+  .social-non-mobile i {
+    display: none;
   }
 }
 
 @media only screen and (min-width: 768px) {
-    .campus-info {
-        border: 0;
-        border-right: 1px solid white;
-        border-bottom: 0;
-        margin-bottom: 0;
-    }
     .hide-hr {
+      display: none;
+    }
+    .mobile-msuinfo-show {
+      display: none;
+    }
+    .social-mobile i {
       display: none;
     }
 }
 
 @media only screen and (max-width: 1199px) {
-  .social-non-mobile i {
-    display: none;
+  .campus-info {
+      border: 0;
+      border-bottom: none;
+      margin-bottom: 15px;
   }
   .social-mobile i {
     text-align:center;
@@ -88,7 +91,10 @@
 }
 
 @media only screen and (min-width: 1200px) {
-  .social-mobile i {
-    display: none;
+  .campus-info {
+      border: 0;
+      border-right: 1px solid white;
+      border-bottom: 0;
+      margin-bottom: 0;
   }
 }
