--- a/home2016.css
+++ b/home2016.css
@@ -298,16 +298,18 @@ Wednesday 06, April, 2016
 
 @media only screen and (max-width: 360px) { .social i { word-spacing: 1px; } }
 
-@media only screen and (max-width: 767px) { .campus-info { border: 0; border-bottom: none; margin-bottom: 15px; }
-  .footer-menu { text-align: center; } }
+@media only screen and (max-width: 767px) { .footer-menu { text-align: center; }
+  .desktop-msuinfo-show { display: none; }
+  .social-non-mobile i { display: none; } }
 
-@media only screen and (min-width: 768px) { .campus-info { border: 0; border-right: 1px solid white; border-bottom: 0; margin-bottom: 0; }
-  .hide-hr { display: none; } }
+@media only screen and (min-width: 768px) { .hide-hr { display: none; }
+  .mobile-msuinfo-show { display: none; }
+  .social-mobile i { display: none; } }
 
-@media only screen and (max-width: 1199px) { .social-non-mobile i { display: none; }
+@media only screen and (max-width: 1199px) { .campus-info { border: 0; border-bottom: none; margin-bottom: 15px; }
   .social-mobile i { text-align: center; } }
 
-@media only screen and (min-width: 1200px) { .social-mobile i { display: none; } }
+@media only screen and (min-width: 1200px) { .campus-info { border: 0; border-right: 1px solid white; border-bottom: 0; margin-bottom: 0; } }
 
 /* Calls to action */
 .calls-to-action { padding: 25px; background: url("media/assets/homepagespring2016/calltoactbg.png") no-repeat; background-size: cover; background-color: rgba(52, 152, 219, 0.72); margin-bottom: 15px; }
