widen footer on large screens

--- a/app/ContentTypes/_footer.scss
+++ b/app/ContentTypes/_footer.scss
@@ -80,6 +80,9 @@
     .campus-info {
       padding-top: 25px;
     }
+    .footer-logo {
+      transform: translate(0%,1%);
+    }
 }
 
 @media only screen and (max-width: 1199px) {
@@ -106,5 +109,8 @@
   }
   .campus-info {
     padding-top: 0px;
+  }
+  .footer-menu {
+    padding-left: 3%;
   }
 }
