add padding-bottom to college portrait

--- a/app/ContentTypes/_footer.scss
+++ b/app/ContentTypes/_footer.scss
@@ -65,6 +65,9 @@
   .social-non-mobile i {
     display: none;
   }
+  .footer-logo {
+    padding-bottom: 20px;
+  }
 }
 
 @media only screen and (min-width: 768px) {
