--- a/home2016.css
+++ b/home2016.css
@@ -298,6 +298,8 @@ Wednesday 06, April, 2016
 
 .footer .fa { padding: 0px 5px; }
 
+div#lhnContainerDone { display: none; }
+
 @media only screen and (max-width: 360px) { .social i { word-spacing: 1px; } }
 
 @media only screen and (max-width: 767px) { .footer-menu { text-align: center; }
