--- a/main2016.css
+++ b/main2016.css
@@ -1776,6 +1776,14 @@ h3 {
   margin-bottom: 15px;
 }
 
+.campus-info span.fa.fa-map-marker.fa-lg {
+  margin-right: 9px;
+}
+
+.campus-info p > a > span.fa.fa-phone.fa-lg {
+  margin-right: 5px;
+}
+
 .college-portrait {
   float: right;
 }
