--- a/home2016.css
+++ b/home2016.css
@@ -292,6 +292,10 @@ Wednesday 06, April, 2016
 
 .campus-info { border: 0; border-bottom: 1px solid white; margin-bottom: 15px; }
 
+.campus-info span.fa.fa-map-marker.fa-lg { margin-right: 9px; }
+
+.campus-info p > a > span.fa.fa-phone.fa-lg { margin-right: 5px; }
+
 .college-portrait { float: right; }
 
 .footer .fa-2x { font-size: 1.75em; }
