fixes the issue on main.css while importing new header nav

--- a/app/styles/main2016.scss
+++ b/app/styles/main2016.scss
@@ -8,7 +8,7 @@
 
 !!! */
 
-@import "MainHeaderNavigation";
+@import "ContentTypes/MainHeaderNavigation";
 @import "ContentTypes/variables";
 @import "ContentTypes/content";
 @import "ContentTypes/navmenu";
